Fix spacing between summary bar and patch history accordion.

--- a/app/webpacker/src/stylesheets/layout.scss
+++ b/app/webpacker/src/stylesheets/layout.scss
@@ -17,6 +17,10 @@
   }
 }
 
+#summary-bar {
+  margin-bottom: 0px;
+}
+
 .main.container {
   margin-top: 60px;
 }
